using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isOnGround = "isOnGround";
    internal static string yVelocity = "yVelocity";
    internal static string isDying = "isDying";
    internal static string isAlive = "isAlive";
    internal static string isCharged = "isCharged";
    internal static string isCharging = "isCharging";
    internal static string canGrow = "canGrow";
    internal static string isMelting = "isMelting";
}

